--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
 flask-cors==5.0.1
+Flask-Login==0.6.3
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
