--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,9 +1,12 @@
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.2.0
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-Login==0.6.3
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
