--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,23 +7,29 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
-
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-      
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-         username: ${{ secrets.DOCKERHUB_USERNAME }}
-         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-    - name: Build and Push Docker Image
+    - name: Log in to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push backend Docker image
       run: |
-        IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/w1867178"
+        IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/w1867178-backend"
         TAG="latest"
-        docker build -t $IMAGE_NAME:$TAG -f Backend/Dockerfile Backend
+        docker build -t $IMAGE_NAME:$TAG -f backend/Dockerfile backend
+        docker push $IMAGE_NAME:$TAG
+
+    - name: Build and push frontend Docker image
+      run: |
+        IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/w1867178-frontend"
+        TAG="latest"
+        docker build -t $IMAGE_NAME:$TAG -f frontend/Dockerfile frontend
         docker push $IMAGE_NAME:$TAG
